<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">
    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>
    <PreferenceCategory android:title="@string/preference_category_experimental_settings">

        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:title="@string/preference_freedreno_sysmem_title"
            android:summary="@string/preference_freedreno_sysmem_desc" />

        <SwitchPreferenceCompat
            android:key="disableCurseforgeApi"
            android:defaultValue="false"
            android:title="@string/preference_disable_curseforge_title"
            android:summary="@string/preference_disable_curseforge_desc" />

        <EditTextPreference
            android:key="curseforgeApiKeyOverride"
            android:title="@string/preference_curseforge_api_key_title"
            android:summary="@string/preference_curseforge_api_key_desc"
            android:dialogTitle="@string/preference_curseforge_api_key_title"
            android:dialogMessage="@string/preference_curseforge_api_key_desc" />

    </PreferenceCategory>
</PreferenceScreen>